--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/antirek/viola-configurator#readme",
   "dependencies": {
+    "astconf": "0.0.4",
     "express": "^4.13.3",
     "gulp-token-replace": "^1.0.2",
     "jade": "^1.11.0",
