--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-route": "~1.4.7",
     "angular-ui-router": "~0.2.15",
     "jquery": "~2.1.4",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular-schema-form": "~0.8.12"
   }
 }
